# wsqlite

./: .readthedocs.yaml  CHANGELOG.md  README.md  README_template.md  ROADMAP.md  TODO_ROADMAP.md  complex_example.db-shm  complex_example.db-wal  example.db-shm  example.db-wal  index.html  pyproject.toml  requirements.txt  setup.py  test_pydantic.py  verify_examples.py
.github/workflows/: test.yml
benchmark/: __init__.py  run.py
docker/: README.md
docs/: CNAME  Makefile  README.md  bibliography.rst  community.rst  conf.py  faq.rst  glossary.rst  index.md  index.rst  requirements.txt
docs/_static/css/: custom.css
docs/api_reference/: README.md  connection.rst  exceptions.rst  index.rst  query_builder.rst  repository.rst  table_sync.rst
docs/getting_started/: README.md  configuration.md  configuration.rst  index.md  index.rst  installation.md  installation.rst  quickstart.md  quickstart.rst
docs/tutorials/: README.md  advanced_features.rst  async_operations.rst  bulk_operations.rst  crud_operations.rst  index.rst  pagination.rst  transactions.rst
examples/: README.md
examples/01_crud/: README.md  example.py
examples/02_new_columns/: README.md  example.py
examples/03_restrictions/: README.md  example.py
examples/04_pagination/: README.md  example.py
examples/05_transactions/: README.md  example.py
examples/06_bulk_operations/: README.md  example.py
examples/07_logging/: README.md  example.py
examples/08_relationships/: README.md  example.py
examples/09_raw_sql/: README.md  example.py
examples/10_aggregations/: README.md  example.py
examples/11_timestamps/: README.md  example.py
examples/12_soft_delete/: README.md  example.py
examples/13_autoid/: README.md  example.py
examples/14_advance_restrictions/: README.md  example.py
examples/15_foreign_keys/: README.md  example.py
examples/16_v15_features/: example.py
examples/17_json_support/: example.py
examples/18_lifecycle_hooks/: example.py
examples/19_soft_delete/: example.py
examples/20_mixins/: example.py
examples/21_custom_table_name/: example.py
examples/22_auto_indexes/: example.py
examples/23_wpipe/: example.py
examples/24_wauth/: example.py  wauth.toml  wisrovi_wauth.db
examples/25_relationships/: example.py
examples/26_complex_types/: example.py
examples/wsqlite/: crupd.py  new_columns.py  with_restrictions.py
src/: README.md
src/wsqlite/: __init__.py
src/wsqlite/core/: connection.py  pool.py  repository.py  sync.py
src/wsqlite/types/: sql_types.py
stress_test/: README.md  __init__.py  run.py
test/: README.md  conftest.py
test/integration/: test_integration.py
test/unit/: README.md  test_advanced_query_builder.py  test_async.py  test_connection.py  test_exceptions.py  test_migrations.py  test_pool.py  test_query_builder.py  test_repository.py  test_sql_types.py  test_sync.py  test_validators.py
wsqlite/: __init__.py
wsqlite/wsqlite/: __init__.py  controller.py
