[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wsqlite"
version = "1.2.1"
authors = [
    { name = "William Steve Rodriguez Villamizar", email = "wisrovi.rodriguez@gmail.com" },
]
description = "SQLite ORM using Pydantic models - simple, type-safe, high-performance SQLite operations with connection pooling"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database :: Database Engines/Servers",
]
dependencies = [
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "click>=8.0.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
benchmark = [
    "psutil>=5.9.0",
]
stress = [
    "psutil>=5.9.0",
]

[project.scripts]
wsqlite = "wsqlite.cli:main"

[project.urls]
Homepage = "https://github.com/wisrovi/wsqlite"
Documentation = "https://github.com/wisrovi/wsqlite#readme"
Repository = "https://github.com/wisrovi/wsqlite"
Issues = "https://github.com/wisrovi/wsqlite/issues"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["test", "examples/test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["wsqlite"]
omit = ["*/tests/*", "*/test_*.py", "*/test/"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]